static/css/base.css
/* ... */
  .logo-lg {
    width: 240px;
    height: 58px;
}

  .logo-sm {
      width: 161px;
      height: 39px;
}

html { 
  scroll-behavior: smooth; 
}

  /* ------------------- Top Banner ----------------------- */
  #top-banner {
    background: #4B5657;
    padding: 10px 0;
  }
  
  #top-banner .offer {
    color: #fff;
  }
  
  #top-banner .offer .btn {
    text-transform: uppercase;
    letter-spacing: 0.1em;
  }
  
  #top-banner a {
    color: #fff;
  }
  
  #top-banner ul.menu {
    margin: 0;
    font-size: 0.738rem;
  }
  
  #top-banner ul.menu > li {
    margin-right: 0;
  }
  
  #top-banner ul.menu > li a {
    color: #eee;
  }
  
  #top-banner ul.menu > li + li:before {
    content: "|\00a0";
    padding: 0 5px;
    color: #f8f9fa;
  }
  
  #top-banner ul.menu > .active {
    color: #999;
  }
  
  /* -------------------- Product Form ---------------------- */

  .btn-file {
    position: relative;
    overflow: hidden;
  }

  .btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
  }

  .custom-checkbox .custom-control-label::before {
    border-radius: 5px;
    border-color: #dc3545;
  }

  .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    border-radius: 5px;
    background-color: #dc3545;
    border-color: #dc3545;
  }

  

  /* -------------------- Navbar ---------------------- */
  
  .navbar {
    background-color: #fff;
    padding-left:10px;
    padding-right:10px;
    padding-bottom: 0px;
    padding-top: 0px !important;
  }
  
  .navbar-brand {
    padding-bottom:23px;
  }

  .navbar .navbar-nav > .nav-item > .nav-link {
    text-transform: uppercase;
    letter-spacing: 0.1em;
    font-weight: 700;
    padding: 30px 15px !important;
    color: #566465;
  }
  
  @media (max-width: 991.98px) {
    .navbar .navbar-nav > .nav-item > .nav-link {
      padding: 10px 15px !important;
    }
  }
  
  .navbar .navbar-nav > .nav-item > .nav-link.active, .navbar .navbar-nav > .nav-item > .nav-link:hover, .navbar .navbar-nav > .nav-item > .nav-link:focus {
    background: #D3D3D3;
  }
  
  @media (max-width: 991.98px) {
    .navbar .dropdown-menu {
      position: relative !important;
      border: none;
    }
  }
  
  @media (min-width: 992px) {
    .navbar .dropdown:hover .dropdown-menu {
      display: block;
    }
  }
  
  .navbar .product-menu-contained {
    padding-right: 30px !important;
    padding-left: 30px !important;
    padding-top: 30px !important;
    padding-bottom: 0px !important;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  }
  
  @media (max-width: 991.98px) {
    .navbar .product-menu-contained {
      padding: 15px !important;
      -webkit-box-shadow: none;
      box-shadow: none;
    }
  }
  
  .navbar .product-menu h5 {
    font-size: 1.0rem;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    padding-bottom: 10px;
    border-bottom: dotted 1px #566465;
  }
  
  @media (max-width: 767.98px) {
    .navbar .product-menu h5 {
      font-size: 0.9rem;
    }
  }
  
  .navbar .product-menu ul {
    margin: 0;
    padding: 0;
  }
  
  .navbar .product-menu ul .nav-item {
    list-style-type: none;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    padding: 4px 0;
  }
  
  .navbar .product-menu ul .nav-item a {
    color: #999;
    font-size: 0.8rem;
    display: block;
    padding: 0 !important;
  }
  
  .navbar .product-menu ul .nav-item a:hover {
    color: #4FCBFF !important;
    text-decoration: none;
  }
  
  .navbar .product-menu .banner {
    margin-bottom: 10px;
  }
  
  .navbar .navbar-btn {
    color: #fff;
    margin-right: 10px;
  }

/* ------------ Account Menu ------------*/

.navbar .account-menu-contained {
  padding-right: 20px !important;
  padding-left: 20px !important;
  padding-top: 30px !important;
  padding-bottom: 0px !important;
  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
}

@media (max-width: 991.98px) {
  .navbar .account-menu-contained {
    padding: 15px !important;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
}

.navbar .account-menu h5 {
  font-size: 1.0rem;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  padding-bottom: 10px;
  border-bottom: dotted 1px #566465;
}

@media (max-width: 768px) {
  .navbar .account-menu h5 {
    font-size: 0.9rem;
  }
}

.navbar .account-menu ul {
  margin: 0;
  padding: 0;
}

.navbar .account-menu ul .nav-item {
  list-style-type: none;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  padding: 4px 0;
}

.navbar .account-menu ul .nav-item a {
  color: #999;
  font-size: 0.8rem;
  display: block;
  padding: 0 !important;
}

.navbar .account-menu ul .nav-item a:hover {
  color: #4FCBFF !important;
  text-decoration: none;
}

.navbar .account-menu .banner {
  margin-bottom: 10px;
}

.navbar .navbar-btn {
  color: #fff;
  margin-right: 10px;
}

/* ------------ Search ------------------*/
  
  #search {
    background: #fff;
  }
  
  #search .container {
    text-align: right;
  }
  
  #search form {
    max-width: 500px;
    padding: 20px 0;
  }
  
  #search .navbar-form {
    float: right;
    width: 500px;
  }
  
/* -------------- Droprown items ------------- */

  .dropdown-item {
    padding: 0.25rem 1.5rem;
    font-weight: 400;
    color: #212529;
  }
  
  .dropdown-item:hover, .dropdown-item:focus {
    color: #343a40;
    background-color: #f8f9fa;
  }
  
  .dropdown-item.active, .dropdown-item:active {
    color: #343a40;
    background-color: #4FCBFF;
  }


/* Sticky footer https://css-tricks.com/couple-takes-sticky-footer/ */

html, body {
    height: 100%;
    display: flex;
    flex-direction: column;
  }

.page-content {
    flex: 1 0 auto;
    margin-top: -48px;
}

.footer {
    flex-shrink: 0;
}

.logo-lg {
    width: 240px;
    height: 58px;
}
/* ... */

